--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Johnny Hauser <johnnyhauser@gmail.com>",
   "license": "CC0-1.0",
   "dependencies": {
+    "@m59/error-cereal": "^0.1.1",
     "ulid": "^2.3.0"
   },
   "devDependencies": {
